添加修改课程2（3）

--- a/Linux/3、Linux权限管控/2、用户和用户组.md
+++ b/Linux/3、Linux权限管控/2、用户和用户组.md
@@ -29,4 +29,31 @@ groupdel 用户组名
 
 **useradd [-g -d] 用户名**
 
-- 选项，
+- 选项，-g指定用户的组，不写-g，会自动创建同名组并加入，写-g需要组已经存在，如已存在同名组，必须使用-g
+- -d指定用户HOME路径，不写-g，HOME目录默认在/home/用户名下
+
+### 删除用户
+
+**userdel [-r] 用户名**
+
+- 选项，-r，删除用户的HOME目录，不使用，删除用户时，HOME目录保留
+
+### 查看用户所属组
+
+  **id 用户名**
+
+  - 参数：用户名，被查看的用户，不写则查看自身
+
+### 修改用户所属组
+
+**usermod -aG 用户组 用户名**
+
+将指定用户加入用户组
+
+## getent命令
+
+**getent passwd**
+
+显示7份信息
+
+用户名：密码(x):用户ID:组ID：描述信息(无用):HOME目录:执行终端(默认bash)
