--- a/Linux/4、Linux实用操作/5、日期和时区.md
+++ b/Linux/4、Linux实用操作/5、日期和时区.md
@@ -15,3 +15,19 @@
    - %S 秒
    - %s 自1970-01-01 00：00：00到现在的秒数
 
+-d 选项，可以安照给定的字符串显示日期，
+如：
+- date -d “+1 day” +%Y%m%d
+- 其中支持的时间标记为：
+  - year 年
+  - month 月
+  - day 天
+  - hour 小时
+  - minute 分钟
+  - second 秒
+
+修改Linux时区
+
+**使用root权限，执行如下命令**，修改时区为东八区
+
+````C
