1、添加20231217diary；2、更新4（5、6）；

--- a/Linux/4、Linux实用操作/5、日期和时区.md
+++ b/Linux/4、Linux实用操作/5、日期和时区.md
@@ -26,8 +26,21 @@
   - minute 分钟
   - second 秒
 
-修改Linux时区
+## 修改Linux时区
 
 **使用root权限，执行如下命令**，修改时区为东八区
 
 ````C
+rm -rf /etc/localtime
+ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+````
+
+## ntp程序
+
+自动校准系统时间
+
+手动校准，需root权限：
+
+````C
+ntpdate -u ntp.aliyun.com
+````
