--- a/Linux/4、Linux实用操作/9、端口.md
+++ b/Linux/4、Linux实用操作/9、端口.md
@@ -2,3 +2,16 @@
 
 端口是设备与外界通讯的出入口。端口分为：物理端口和虚拟端口
 
+- 物理端口：又可称为接口，是可见的端口，如USB接口，RJ45网口，HDMI网口等
+- 虚拟端口：是指计算机内部的端口，是不可见的，用于操作系统和外部交互使用的
+
+计算机程序之间的通讯，通过IP只能锁定计算机，但是无法锁定具体的程序
+
+通过端口可以锁定计算机上具体的程序，确保程序之间进行沟通
+
+Linux系统是一个超大号小区，可以支持65535个端口，这6万多个端口分为3类进行使用
+
+- 公认端口：1~1023,通常用于一些系统内置或知名程序的预留使用，如SSH服务的22端口，HTTPS服务的443端口，非特殊需要，不要占用这个范围的端口
+- 注册端口：1024~49151,通常可以随意使用，用于松散的绑定一些程序或服务
+- 动态端口：49152~65535,通常不会固定绑定程序，而是当程序对外进行网络链接时，用于临时使用
+
