1、提交一周计划；2、提交Linux课程；

--- a/Diary/回退版本_覆盖commit_20231219.md
+++ b/Diary/回退版本_覆盖commit_20231219.md
@@ -18,3 +18,14 @@ commit提交之后
 ````C
 git push origin 分支名 -f   //-f 强制覆盖 
 ````
+
+commit 之后撤回：
+
+````C
+git reset --soft HEAD^ 
+````
+
+index.lock文件导致git无法操作
+````C
+rm -rf xxx/index.lock
+````
