--- a/Linux/4、Linux实用操作/9、端口.md
+++ b/Linux/4、Linux实用操作/9、端口.md
@@ -15,3 +15,13 @@ Linux系统是一个超大号小区，可以支持65535个端口，这6万多个
 - 注册端口：1024~49151,通常可以随意使用，用于松散的绑定一些程序或服务
 - 动态端口：49152~65535,通常不会固定绑定程序，而是当程序对外进行网络链接时，用于临时使用
 
+## 查看端口占用
+
+可以通过nmap查看IP地址的占用情况
+
+**nmap 被查看的IP地址**
+
+可以通过netstat，查看指定端口的占用情况
+
+**netstat -anp | grep 端口号**
+
