提交diary和课程

--- a/Diary/20240123：一周计划.md
+++ b/Diary/20240123：一周计划.md
@@ -57,3 +57,21 @@
 1. (2336镜头_4k_2k)5601_board#A8_WIFI_VOICE_DOG_FL_7707_20231024  APP换成  6侦探  的
 2. (英语_悦米)联特R306_key_2063_HSD7701S_640x360_改版本号&logo&升级界面&码流&小窗_20231226
 3. (悦米)联特R306_key_2063_HSD7701S_640x360_改码流&小窗_20240104(1).7z
+
+### 20240127:
+
+今日未完成：
+
+1. 
+2. 
+3. 
+4. 
+5. 
+
+今日已完成：
+
+1. (1440P)5601_board#A8_WIFI_VOICE_DOG_BOE_9707_20230321
+2. (2K)5601_board#A8_WIFI_VOICE_DOG_BOE_9707_20230508
+3. (4K-1600)5601_board#A8_WIFI_VOICE_DOG_BOE_9707_20230630(1)
+4. 俄文(1440P)5601_board#A8_WIFI_BOE_9707_202301051924
+5. 俄文(2K)5601_board#A8_WIFI_BOE_9707_202301051924(5)-230304
