--- a/Linux/4、Linux实用操作/11、主机状态监控.md
+++ b/Linux/4、Linux实用操作/11、主机状态监控.md
@@ -6,3 +6,29 @@ top：命令名称，14:39:58：当前系统费时间，up 6 min：启动了6分
 
 tasks：175 total：总共有175个进程，1 running：1个进程正在运行，174 sleeping：174个进程睡眠，0 stopped：0个停止进程，0 zombie：0个僵尸进程
 
+%CPU(s):us:用户CPU使用率，sy：系统CPU使用率，ni：高优先级进程占用CPU百分比，id：空闲CPU率，wa：IO等待CPU占用率，hi：CPU硬件中断
+率，si：CPU软件中断率，st：强制等待占用CPU率
+
+kiB Mem：物理内存，total：总量，free：空闲，used：使用，buff/cache占用
+
+kiB Swap：虚拟内存（交换空间）
+
+PID：进程id
+USER：进程所属用户
+PR：进程优先级，越小越高
+NI：负值表示高优先级，正表示低优先级
+VIRT：进程使用虚拟内存，单位KB
+RES：进程使用物理内存，单位KB
+SHR：进程使用使用共享内存，单位KB
+S：进程状态（S休眠，R运行，Z僵死状态，N负数优先级，I空闲状态）
+%CPU：进程占用CPU率
+%MEM：进程占用内存率
+TIME+：进程使用CPU时间总计，单位10毫秒
+COMMAND：进程的命令或名称或程序文件路径
+
+使用df命令，可以查看硬盘的使用情况
+
+语法：df [-h]
+
+选项：-h，单位切换；
+
