添加日记和批处理、学习

--- a/FishC/S1E4.md
+++ b/FishC/S1E4.md
@@ -1,7 +1,7 @@
 0. 变量和常量
-1. 数字、下划线和字母
-2. AEFG
-3. 
-4. 定义的不可使用的词
+1. 变量和存储单元
+2. AEFGI
+3. C语言的语法
+4. C语言内部使用的名字
 5. printf写成了print
-6. 
+6. _FishC是整型常数的无效后缀
