--- a/FishC/S1E6.md
+++ b/FishC/S1E6.md
@@ -6,3 +6,45 @@
 5. E、F
 6. unsigned int 
 7. 计算机只认识0和1
+
+````C
+#include <stdio.h>
+#include <math.h>
+
+int main()
+{
+        int result;
+
+        result = pow(1, 2) + pow(2, 3) + pow(3, 4) + pow(4, 5) + pow(5, 6);
+
+        printf("结果是：%d\n", result);
+
+        return 0;
+}
+````
+
+````C
+#include <stdio.h>
+#include <math.h>
+
+int main()
+{
+        unsigned long long sum = 0;
+        unsigned long long temp;
+        unsigned long long weight;
+        int i;
+
+        for (i=0; i < 64; i++)
+        {
+                temp = pow(2, i);
+                sum = sum + temp;
+        }
+
+        weight = sum / 25000;
+
+        printf("舍罕王应该给予达依尔%llu粒麦子！\n", sum);
+        printf("如果每25000粒麦子为1kg，那么应该给%llu公斤麦子！\n", weight);
+
+        return 0;
+}
+````
