--- a/Diary/回退版本_覆盖commit_20231219.md
+++ b/Diary/回退版本_覆盖commit_20231219.md
@@ -31,3 +31,23 @@ rm -rf xxx/index.lock
 ````
 
 3、adkey.c读按键消息
+
+4、 忽略删除已提交git仓库的文件
+.gitignore只能忽略那些原来没有被track的文件，如果某些文件已经被纳入了版本管理中，则修改.gitignore是无效的。
+解决方法就是先把本地缓存删除（改变成未track状态），然后再提交:
+````C
+git rm -r --cached 文件
+````
+
+5、git 乱码问题  
+
+现象：
+
+````C
+modified:   "Diary/\345\233\236\351\200\200\347\211\210\346\234\254_\350\246\206\347\233\226commit_20231219.md"  
+````
+解决方法：
+
+````C
+git config --global core.quotepath false
+````
