--- a/批处理学习/2、批处理的语法和功能.md
+++ b/批处理学习/2、批处理的语法和功能.md
@@ -1,3 +1,6 @@
+
+## 1、批处理的基本命令
+````C
 echo命令
 
 @命令：
@@ -15,3 +18,20 @@ call命令：
 调用指定标签后的命令
 
 call [[盘符：][路径]文件名[一组参数]] [[:指定位置的标签][]]
+````
+
+## 2、批处理中看文件是否存在
+````C
+IF EXIST "..\bin\Debug\hx330x_sdk.bin" (
+    echo file_in
+) ELSE (
+    echo file_out
+)
+pause
+````
+
+## 3、批处理中打印
+````C
+echo [DEBUG] TARGET_OUTPUT_FILE = %1    //打印第一个参数
+echo [DEBUG] TARGET_OUTPUT_FILE = "%OUT_BIN%"   //打印OUT_BIN，是一个文件目录
+````
